담당자 기준으로 필터링할 수 있다 (#92)
- 담당자 기준 필터링 기능을 구현합니다
  - 기존 진행 상황 필터링 관련 클래스가 담당자 필터링도 처리할 수 있도록 변경합니다
  - 두 필터링을 독립적으로 또는 동시에 적용할 수 있습니다
- java factory method naming convention에 맞춰 팩토리 메서드명을 바꿉니다
  - 여러 인자로 객체를 만드는 팩토리 메서드명은 일반적으로 of를 써야 했습니다